Fix wrong reference

--- a/dspace/config/modules/stats.cfg
+++ b/dspace/config/modules/stats.cfg
@@ -32,4 +32,4 @@ stats.spider.ipmatch.enabled = true
 stats.spider.agentempty.enabled = false
 stats.spider.agentregex.enabled = true
 #  Default is downloaded during build: ${dspace.dir}/config/COUNTER_Robots_list.txt
-spider.agentregex.regexfile = ${dspace.dir}/config/COUNTER_Robots_list.txt
+stats.spider.agentregex.regexfile = ${dspace.dir}/config/COUNTER_Robots_list.txt
