--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1027,7 +1027,7 @@ webui.strengths.show = false
 webui.browse.index.1 = dateissued:item:dateissued
 webui.browse.index.2 = author:metadata:dc.contributor.*\,dc.creator:text
 webui.browse.index.3 = title:item:title
-webui.browse.index.4 = subject:metadata:dc.subject.*:text
+webui.browse.index.4 = subject:metadata:dc.subject:text
 #webui.browse.index.5 = dateaccessioned:item:dateaccessioned
 
 ## example of authority-controlled browse category - see authority control config
@@ -1065,6 +1065,7 @@ webui.browse.index.4 = subject:metadata:dc.subject.*:text
 webui.itemlist.sort-option.1 = title:dc.title:title
 webui.itemlist.sort-option.2 = dateissued:dc.date.issued:date
 webui.itemlist.sort-option.3 = dateaccessioned:dc.date.accessioned:date
+
 
 # Set the options for how the indexes are sorted
 #
