--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -182,15 +182,15 @@ log.init.config = ${dspace.dir}/config/log4j.properties
 # properties.
 
 # Credentials used to authenticate against the registration agency:
-identifier.doi.user = username
-identifier.doi.password = password
+identifier.doi.user = BL.ED
+identifier.doi.password = GzG29en%
 # DOI prefix used to mint DOIs. All DOIs minted by DSpace will use this prefix.
 # The Prefix will be assigned by the registration agency.
-identifier.doi.prefix = 10.5072
+identifier.doi.prefix = 10.7488
 # If you want to, you can further separate your namespace. Should all the
 # suffixes of all DOIs minted by DSpace start with a special string to separate
 # it from other services also minting DOIs under your prefix?
-identifier.doi.namespaceseparator = dspace/
+identifier.doi.namespaceseparator = era/
 
 ##### Plugin management #####
 
@@ -476,7 +476,7 @@ crosswalk.dissemination.DataCite.schemaLocation = \
     http://datacite.org/schema/kernel-3 \
     http://schema.datacite.org/meta/kernel-3/metadata.xsd
 crosswalk.dissemination.DataCite.preferList = false
-crosswalk.dissemination.DataCite.publisher = My University
+crosswalk.dissemination.DataCite.publisher = University of Edinburgh
 #crosswalk.dissemination.DataCite.dataManager = # defaults to publisher
 #crosswalk.dissemination.DataCite.hostingInstitution = # defaults to publisher
 crosswalk.dissemination.DataCite.namespace = http://datacite.org/schema/kernel-3
@@ -648,7 +648,7 @@ event.dispatcher.default.class = org.dspace.event.BasicDispatcher
 # Add doi here if you are using org.dspace.identifier.DOIIdentifierProvider to generate DOIs.
 # Adding doi here makes DSpace send metadata updates to your doi registration agency.
 # Add rdf here, if you are using dspace-rdf to export your repository content as RDF.
-event.dispatcher.default.consumers = versioning, discovery, eperson
+event.dispatcher.default.consumers = versioning, discovery, eperson, harvester, doi
 
 # The noindex dispatcher will not create search or browse indexes (useful for batch item imports)
 event.dispatcher.noindex.class = org.dspace.event.BasicDispatcher
