--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -183,7 +183,7 @@ log.init.config = ${dspace.dir}/config/log4j.properties
 
 # Credentials used to authenticate against the registration agency:
 identifier.doi.user = BL.ED
-identifier.doi.password = GzG29en%
+identifier.doi.password = GzG29en5
 # DOI prefix used to mint DOIs. All DOIs minted by DSpace will use this prefix.
 # The Prefix will be assigned by the registration agency.
 identifier.doi.prefix = 10.7488
