--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -808,7 +808,7 @@ webui.submit.blocktheses = false
 
 # Whether or not to use the 'advanced' form of the access step.
 # Defaults to false, ie the simple form is used.
-#webui.submission.restrictstep.enableAdvancedForm = false
+webui.submission.restrictstep.enableAdvancedForm = false
 
 # Special Group for UI: all the groups nested inside this group
 # will be loaded in the multiple select list of the RestrictStep
