Shibboleth Auth beginning

--- a/dspace/config/modules/authentication-shibboleth.cfg
+++ b/dspace/config/modules/authentication-shibboleth.cfg
@@ -35,7 +35,7 @@
 # but restricted access to limitted areas - such as administration.
 
 # Whether to use lazy sessions or active sessions.
-authentication-shibboleth.lazysession = true
+authentication-shibboleth.lazysession = false
 
 # The url to start a shibboleth session (only for lazy sessions)
 authentication-shibboleth.lazysession.loginurl = /Shibboleth.sso/Login
@@ -89,8 +89,8 @@ authentication-shibboleth.lazysession.secure = true
 # Authentication headers for Mail, NetID, and Tomcat's Remote User.
 # Supply all parameters possible.
 authentication-shibboleth.netid-header = SHIB-NETID
-authentication-shibboleth.email-header = SHIB-MAIL
-authentication-shibboleth.email-use-tomcat-remote-user = false
+authentication-shibboleth.email-header = MAIL
+authentication-shibboleth.email-use-tomcat-remote-user = true
 
 # Should we allow new users to be registered automatically?
 authentication-shibboleth.autoregister = true
