Shibboleth and authentication fixes

--- a/dspace/config/modules/authentication-shibboleth.cfg
+++ b/dspace/config/modules/authentication-shibboleth.cfg
@@ -89,7 +89,7 @@ authentication-shibboleth.lazysession.secure = true
 # Authentication headers for Mail, NetID, and Tomcat's Remote User.
 # Supply all parameters possible.
 authentication-shibboleth.netid-header = SHIB-NETID
-authentication-shibboleth.email-header = MAIL
+authentication-shibboleth.email-header = SHIB-MAIL
 authentication-shibboleth.email-use-tomcat-remote-user = true
 
 # Should we allow new users to be registered automatically?
